infra/k8s/12-localstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: ingressos-data
  labels:
    app: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:3
          ports:
            - containerPort: 4566
          volumeMounts:
            - name: init
              mountPath: /etc/localstack/init/ready.d
          readinessProbe:
            httpGet:
              path: /_localstack/health
              port: 4566
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              memory: "1Gi"
      volumes:
        - name: init
          configMap:
            name: localstack-init
            defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: ingressos-data
spec:
  selector:
    app: localstack
  ports:
    - port: 4566
      targetPort: 4566
